<resources>
    <string name="app_name">HomeWorkNotes</string>
    <string name="nombre">Nombre</string>
    <string name="homework_name">HomeWork Name</string>
    <string name="details">Details</string>
    <string name="homework_made">HomeWork Made</string>
    <string name="agrega_una_nota">Agrega una nota</string>
    <string name="search_note">Buscar Nota</string>
    <string name="delete_question">¿Qué desea hacer?</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
</resources>
